Refactored code and added buttons as user input

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <script src="game.js"></script>
+    <script src="game.js" defer></script>
   </head>
+  <body>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+  </body>
 </html>
